<resources>
    <string name="app_name">ELISON</string>

    <string name="title_activity_login">Sign in</string>

    <string name="prompt_Login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="incorrect_login">Connection denied</string>
    <string name="action_register">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="textview_you_liked">You liked</string>
    <string name="textview_suggestions">Suggestions</string>
    <string name="textview_people">Other people liked</string>

    <string name="backdrop">Backdrop</string>
    <string name="seasons">S: </string>
    <string name="similare">Recommendation From ELISON</string>
</resources>


