<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.gm.gislain.tvshowapp.ShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/layout_backdrop">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="30sp"
                    android:text="lllllllllllllll"
                    android:alpha="1.0"
                    android:layout_gravity="center"
                    android:id="@+id/show_title_textview"/>

            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="200dp"
                android:id="@+id/backdrop_imageview"
                android:src="@drawable/ic_action_search"
                android:alpha="0.7"
                android:scaleType="fitXY"
                android:contentDescription="@string/backdrop"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:id="@+id/rating"
                android:visibility="gone"
                />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/infos_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/year"/>

                <ImageView
                    android:layout_width="@dimen/separator_size"
                    android:layout_height="@dimen/separator_size"
                    android:layout_marginStart="@dimen/separator_margin"
                    android:layout_marginEnd="@dimen/separator_margin"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/network"/>
                <ImageView
                    android:layout_width="@dimen/separator_size"
                    android:layout_height="@dimen/separator_size"
                    android:layout_marginStart="@dimen/separator_margin"
                    android:layout_marginEnd="@dimen/separator_margin"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasons"
                    android:id="@+id/seasons"/>
                <ImageView
                    android:layout_width="@dimen/separator_size"
                    android:layout_height="@dimen/separator_size"
                    android:layout_marginStart="@dimen/separator_margin"
                    android:layout_marginEnd="@dimen/separator_margin"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"/>
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/actors_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actors"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="@dimen/overview_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:id="@+id/overview"/>

        <TextView
            android:layout_marginTop="@dimen/similare_margin"
            android:layout_marginBottom="@dimen/similare_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical|end"
            android:text="@string/similare"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/suggestions_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/similaire_shows">
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</ScrollView>
