<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gm.gislain.tvshowapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/intro_video"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_centerVertical="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:id="@+id/logged_user_meta"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TO ELISON"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="WE ARE HOPPING YOUR HAVING  GOOD TIME HERE WITH US . PLEASE TRY OUR RECOMMENDATION SYSTEM AND DO GIVE YOUR FEEDBACK"
                    android:textSize="10sp"
                    />
            </LinearLayout>



        </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:text="@string/textview_you_liked"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_you_liked_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_you_like">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:text="@string/textview_suggestions"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/suggestions_loader"
            />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_chevron_right_black_24dp"
                android:id="@+id/showSuggestions"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/suggestion_content">
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>



        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:visibility="gone"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_people"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/suggestion_users">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre1"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre1_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre1">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre2"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre2_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre2">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre3"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre3_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre3">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre4"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre4_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre4">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre5"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre5_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre5">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre6"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre6_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre6">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/textview_genre7"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre7_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre7">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre8"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre8_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre8">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_marginTop="@dimen/margin_top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:id="@+id/textview_genre9"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/textview_genre9_loader"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_genre9">
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
    </LinearLayout>



</ScrollView>
